--- a/ToDoList/src/com/davidlapadula/todolist/mainwindow.fxml
+++ b/ToDoList/src/com/davidlapadula/todolist/mainwindow.fxml
@@ -10,23 +10,43 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.control.ToggleButton?>
 <BorderPane fx:id="mainBorderPane"
             fx:controller="com.davidlapadula.todolist.Controller"
             xmlns:fx="http://javafx.com/fxml">
     <top>
-        <MenuBar>
-            <Menu text="File">
-                <items>
-                    <MenuItem text="New..." onAction="#showNewItemDialogue"/>
-                    <SeparatorMenuItem />
-                    <MenuItem text="Exit..." />
-                </items>
-            </Menu>
-        </MenuBar>
+        <VBox>
+            <MenuBar>
+                <Menu text="File">
+                    <items>
+                        <MenuItem text="New..." onAction="#showNewItemDialogue"/>
+                        <SeparatorMenuItem />
+                        <MenuItem text="Exit..." onAction="#handleExit"/>
+                    </items>
+                </Menu>
+            </MenuBar>
+            <ToolBar>
+                <HBox>
+                    <Button text="New"  onAction="#showNewItemDialogue">
+                       <tooltip>
+                           <Tooltip text="Add new item"/>
+                       </tooltip>
+                    </Button>
+                    <ToggleButton text="Today's items" fx:id="filterToggleButton" onAction="#handleFilterButton">
+                        <tooltip>
+                            <Tooltip text="Down: today's items. Up: show all items"/>
+                        </tooltip>
+                    </ToggleButton>
+                </HBox>
+            </ToolBar>
+        </VBox>
     </top>
 
     <left>
-        <ListView fx:id="todoListView">
+        <ListView fx:id="todoListView" onKeyPressed="#handleKeyPressed">
         </ListView>
     </left>
 
